[package]
name = "gdrs"
version = "0.1.0"
authors = ["DePianoman <depianoman2004@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql="20.1.0"
num="0.4.0"
num-traits="0.2.14"
num-derive="0.3.3"
rocket="0.4.10"
hmac="0.11.0"
sha-1="0.9.6"
sha2="0.4.2"
lazy_static="1.4.0"
base64="0.13.0"
hex="0.4.3"